--- a/parseLines2.html
+++ b/parseLines2.html
@@ -128,7 +128,7 @@
   <input type="number" id="EM" name="EM" value="1.050">
        <label for="EM">MM \ S:</label>
   <input type="number" id="FR" name="FR" value="20">
-  <input type="button" value="do it - - - - do it - - - - do it - - - - do it - - - - do it - - - - do it - - - - do it - - - - do it - - - - do it - - - - " onclick="reco();"><br>
+  <input type="button" value="PROCESS" onclick="reco();"><br>
  <textarea rows="40" cols="60" id="inputMain"> </textarea>
 
  <textarea rows="40" cols="60" id="outputMain"> </textarea>
