--- a/parseLines2.html
+++ b/parseLines2.html
@@ -143,12 +143,30 @@
 
  <form id="theForm">
  
+ 
+  
+      <input type="file" name="inputfile"
+            id="inputfile">
+    <br>
+
+    <script type="text/javascript">
+        document.getElementById('inputfile')
+            .addEventListener('change', function() {
+              
+            var fr=new FileReader();
+            fr.onload=function(){
+                document.getElementById('inputMain').value = fr.result;
+            }
+              
+            fr.readAsText(this.files[0]);
+        })
+    </script>
   <label for="LH">Layer Height:</label>
   <input type="number" id="LH" name="LH" value=".20">
-  
+  <br>
   <label for="EM">Extrusion Multiplier:</label>
   <input type="number" id="EM" name="EM" value="1.050">
-  
+  <br>
   <label for="FR">MM \ S:</label>
   <input type="number" id="FR" name="FR" value="20">
   
@@ -156,15 +174,15 @@
   
   <label for="RET">Retraction Distance:</label>
   <input type="number" id="RET" name="RET" value="2.0">
-  
+  <br>
   <label for="RTS">Retraction speed:</label>
   <input type="number" id="RTS" name="RTS" value="45">
-  
+  <br>
   <input type="button" value="PROCESS" onclick="reco();"><br>
   
- <textarea rows="40" cols="60" id="inputMain"> </textarea>
+ <textarea rows="60" cols="70" id="inputMain"> </textarea>
 
- <textarea rows="40" cols="60" id="outputMain"> </textarea>
+ <textarea rows="60" cols="70" id="outputMain"> </textarea>
 
 
  </form>
